[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CellularAutomata.gd" type="Script" id=2]
[ext_resource path="res://CellularAutomataThread.tscn" type="PackedScene" id=3]
[ext_resource path="res://TilesetLALA.tres" type="TileSet" id=4]
[ext_resource path="res://Scripts/Growth_Manager.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=6]
[ext_resource path="res://Textures/Characters/character0.png" type="Texture" id=7]
[ext_resource path="res://Interface/GasMeter.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/DrawWater.gd" type="Script" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D grid_tex;
uniform vec2 screen_size = vec2(1024.0, 768.0);

void fragment() {
	// convert UV coordinates to screen
	// this is in PIXELS
	vec2 uv_to_screen = vec2( UV.x * screen_size.y * (32.0/24.0), UV.y * screen_size.y);
	
	// now convert these back to tilemap coordinates
	// this is in INDICES
	vec2 screen_to_map = vec2( floor(uv_to_screen.x / 32.0), floor(uv_to_screen.y / 32.0) );
	
	// and convert this back to a UV => divide by total pixel size of texture
	// (add 0.5 to be in the center of the pixel we want; if we don't do this, we pick the value at the edge, which will lead to unpredictable resutls)
	vec2 pixel_size = 1.0 / vec2(textureSize(grid_tex, 0));
	vec2 map_to_uv = vec2( (screen_to_map.x + 0.5) * pixel_size.x, (screen_to_map.y + 0.5) * pixel_size.y);
	
	// set color based on cellular automaton texture
	COLOR = texture(grid_tex, map_to_uv).rgba;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/screen_size = Vector2( 1024, 768 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 20.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CellularAutomata" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="CellularAutomata"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CellularAutomata/Control"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Semaphore" parent="CellularAutomata/Control/ColorRect" instance=ExtResource( 3 )]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -1 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( 131081, 0, 0, 131087, 0, 0, 196617, 0, 0, 196623, 0, 0, 196638, 0, 0, 262153, 0, 0, 262159, 0, 0, 262174, 0, 0, 327689, 0, 0, 327695, 0, 0, 393225, 0, 0, 393231, 0, 0, 458761, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589840, 0, 0, 589841, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 655367, 0, 0, 655377, 0, 0, 720902, 0, 0, 720903, 0, 0, 720913, 0, 0, 720914, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0 )

[node name="Growth_Manager" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Player" type="RigidBody2D" parent="." groups=[
"WarmthGivers",
"OxygenTakers",
"Players",
]]
position = Vector2( 423.269, 210.526 )
mode = 2
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="Player"]
position = Vector2( 0, 35 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 5 )

[node name="Interface" type="Node2D" parent="Player"]

[node name="HP" parent="Player/Interface" instance=ExtResource( 8 )]
position = Vector2( 0, -9 )
scale = Vector2( 0.2, 0.2 )

[node name="OxygenLevels" parent="Player/Interface" instance=ExtResource( 8 )]
position = Vector2( 0, 5 )

[node name="HeatLevels" parent="Player/Interface" instance=ExtResource( 8 )]
position = Vector2( 0, 15 )

[node name="ThirstLevels" parent="Player/Interface" instance=ExtResource( 8 )]
position = Vector2( 0, 24.7264 )

[node name="DrawWater" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Interface" type="CanvasLayer" parent="."]
